[project]
name = "ui"
version = "0.0.5"
description = "A Python UI framework inspired by Flet"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet[all]>=0.85.2",
    "flet-code-editor",
    "flet-charts",
    "flet-video",
    "flet-audio",
]

[project.urls]
"Homepage" = "https://www.github.com/icstos/cs-ui"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ui"]
package-dir = { "ui" = "src/ui" }
include-package-data = true

# [tool.setuptools.package-dir]
# ui = "cs_ui"
